--- a/push-notifier/angular.json
+++ b/push-notifier/angular.json
@@ -21,7 +21,7 @@
             ],
             "tsConfig": "tsconfig.app.json",
             "assets": [
-              "src/favicon.ico",
+              "src/assets/icons/logoMini.png",
               "src/assets",
               "src/manifest.webmanifest"
             ],
@@ -87,7 +87,7 @@
             ],
             "tsConfig": "tsconfig.spec.json",
             "assets": [
-              "src/favicon.ico",
+              "src/assets/icons/logoMini.png",
               "src/assets",
               "src/manifest.webmanifest"
             ],
