--- a/push-notifier/angular.json
+++ b/push-notifier/angular.json
@@ -23,7 +23,8 @@
             "assets": [
               "src/assets/icons/logo_72.png",
               "src/assets",
-              "src/manifest.webmanifest"
+              "src/manifest.webmanifest",
+              "src/firebase-messaging-sw.js" 
             ],
             "styles": [
               "@angular/material/prebuilt-themes/indigo-pink.css",
